refactor(project): update notifications and maintainance
